# postmester-medcom

./: Regler.xlsx  main.py  pyproject.toml
process/: config.py
